--- a/title_case.html
+++ b/title_case.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/jquery-1.11.2.js"></script>
     <script src="js/scripts.js"></script>
 
@@ -14,18 +22,26 @@
         <h1> Title Case Detector</h1>
 
 
-        <form id = "title-case">
+        <form id="title-case">
             <div class = "form=group">
-                <label for = "titleCaseThree"> Enter a word/sentence to convert into title case : </label>
-                <input id = "titleCaseThree" type= "text">
+                <div class="row">
+                  <div class="col-xs-12 col-md-4"><p><label for = "titleCaseThree"> Enter a word/sentence to convert into title case: </label></p></div>
+                  <div class="col-xs-6 col-md-4"><input id = "titleCaseThree" type= "text"></div>
+                  <div class="col-xs-6 col-md-1"><button type = "submit" class="btn"> Do it!</button></div>
+                </div>
+
+
             </div>
 
-            <button type = "submit" class="btn"> Find out!</button>
+
         </form>
 
         <div id="result">
-            <p>Here it is all Caps :<br/><span class="UpperCase"></span> </p>
-      </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-4"><p>Here it is all Caps :</p></div>
+              <div class="col-xs-6 col-md-4"><span class="UpperCase"></span> </div>
+            </div>
+                  </div>
     </div>
   </body>
 </html>
